	PR c++/69509 	PR c++/69516 	* constexpr.c (cxx_eval_array_reference): Give the "array subscript 	out of bound" error earlier. 	* init.c (build_vec_init): Change NE_EXPR into GT_EXPR.  Update the 	commentary.

* g++.dg/ext/constexpr-vla2.C: New test.
	* g++.dg/ext/constexpr-vla3.C: New test.
	* g++.dg/ubsan/vla-1.C: Remove dg-shouldfail.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@232969 138bc75d-0d04-0410-961f-82ee72b054a4